--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "spatie/laravel-permission": "^6.7",
-        "spatie/laravel-query-builder": "^6.0"
+        "spatie/laravel-query-builder": "^6.0",
+        "stripe/stripe-php": "^13.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
